background colour+images

--- a/index.html
+++ b/index.html
@@ -12,43 +12,46 @@
 
     <section class="container">
         <div class="content row">
-                <div class="img">
-                    <img src="./img/1.svg" alt="1">
-                <div class="title">
-                    <h1>Client kickoff</h1>
-                </div>
-                <div class="text">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet ad mollitia ea, quaerat excepturi nemo nobis id reprehenderit commodi eligendi rerum incidunt nihil, autem dolorum deleniti doloremque? Quisquam, magnam laboriosam?</p>
-                </div>
-                </div>
-
-                <div class="img">
-                    <img src="./img/2.svg" alt="1">
-                <div class="title">
-                    <h1>messaging developement</h1>
-                </div>
-                <div class="text">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo, minima sit. Repellendus atque cum reiciendis fuga? Distinctio ratione consequatur quibusdam, porro atque ea qui sint, maiores, laboriosam saepe voluptates necessitatibus?</p>
+            <div class="column">
+                <div class="img-one"></div>
+                <div class="description">
+                    <div class="title">
+                        <h1>Client kickoff</h1>
+                    </div>
+                    <div class="text">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere velit saepe assumenda reiciendis possimus tempore nisi, totam eligendi aperiam pariatur, dignissimos nam temporibus recusandae similique nihil, corporis doloremque excepturi ea.</p>
+                    </div>
                 </div>
             </div>
-
-                <div class="img">
-                    <img src="./img/3.svg" alt="1">
+            <div class="column">
+                <div class="img-two"></div>
+                <div class="description">
+                    <div class="title">
+                        <h1>messaging developement</h1>
+                    </div>
+                    <div class="text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat accusamus assumenda illum cupiditate veritatis, corporis perspiciatis libero vel dignissimos nihil consequatur inventore, voluptatibus tempore minima maiores! Nobis dolor obcaecati molestias.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="img-three"></div>
                 <div class="title">
                     <h1>Sales alignment</h1>
                 </div>
                 <div class="text">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, dicta sequi aperiam nesciunt minus assumenda animi eius adipisci fuga consequuntur deleniti temporibus harum similique corrupti minima, quae mollitia in ipsam.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, omnis ut. Magni, illum nemo veritatis molestiae quas sint eius quod ratione incidunt quidem animi asperiores dignissimos laborum aperiam est velit.</p>
                 </div>
             </div>
-
-                <div class="img">
-                    <img src="./img/4.svg" alt="1">
-                <div class="title">
-                    <h1>Campaing strategy</h1>
-                </div>
-                <div class="text">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus quidem rem facere nam, eos maxime dolore velit itaque, necessitatibus obcaecati fugit voluptas a minus et ullam nesciunt nulla sint? Eaque?</p>
+            <div class="column">
+                <div class="img-four"></div>
+                <div class="description">
+                    <div class="title">
+                        <h1>Campaing strategy</h1>
+                    </div>
+                    <div class="text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, saepe neque vitae sit corporis velit deserunt fugit rem in harum sequi fugiat sed nemo nam perspiciatis magnam est nobis voluptatum.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -56,4 +59,3 @@
 
 </body>
 </html>
-
