added margin to text title

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
             </div>
             <div class="column">
                 <div class="img-three"></div>
-                <div class="title">
-                    <h1>Sales alignment</h1>
-                </div>
-                <div class="text">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, omnis ut. Magni, illum nemo veritatis molestiae quas sint eius quod ratione incidunt quidem animi asperiores dignissimos laborum aperiam est velit.</p>
+                <div class="description">
+                    <div class="title">
+                        <h1>Sales alignment</h1>
+                    </div>
+                    <div class="text">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, omnis ut. Magni, illum nemo veritatis molestiae quas sint eius quod ratione incidunt quidem animi asperiores dignissimos laborum aperiam est velit.</p>
+                    </div>
                 </div>
             </div>
             <div class="column">
